--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header class="header">
-        <a class="link header-logo" href="/"><span class="accent">Web</span>Studio</a>
+        <a class="link logo" href="/">Web<span class="header-logo">Studio</span></a>
         <nav class="header-nav">
             <ul class="list header-list">
                 <li class="header-item">
@@ -29,10 +29,10 @@
         </nav>
         <ul class="list header-contacts">
             <li>
-                <a class="link header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="link header-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-                <a class="link header-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+                <a class="link header-link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
@@ -42,7 +42,7 @@
             <button type="button" class="hero-btn">Заказать услугу</button>
         </section>
         <section class="feature">
-            <h2 hidden>Особенности</h2>
+            <h2 class="visually-hidden">Особенности</h2>
             <ul class="list feature-list">
                 <li>
                     <h3 class="title">Внимание к деталям</h3>
@@ -63,7 +63,7 @@
             </ul>
         </section>
         <section class="about">
-            <h2 class="about-title">Чем мы занимаемся</h2>
+            <h2 class="section-title">Чем мы занимаемся</h2>
             <ul class="list about-list">
                 <li class="about-item">
                     <img src="./images/about-img-1.jpg" alt="програмирование сайта" width="370" height="294" />
@@ -78,7 +78,7 @@
             </ul>
         </section>
         <section class="team">
-            <h2 class="team-title">Наша команда</h2>
+            <h2 class="section-title">Наша команда</h2>
             <ul class="list team-list">
                 <li class="team-item">
                     <img src="./images/img4.jpg" alt="Игорь Демьяненко" width="270" height="260" />
@@ -96,7 +96,7 @@
                     <p lang="en" class="team-profession">Marketing</p>
                 </li>
                 <li class="team-item">
-                    <img src="./images/img7.jpg" alt="Михаил Ермаков" width="270" height="260">
+                    <img src="./images/img7.jpg" alt="Михаил Ермаков" width="270" height="260" />
                     <h3 class="team-name">Михаил Ермаков</h3>
                     <p lang="en" class="team-profession">UI Designer</p>
                 </li>
@@ -104,19 +104,22 @@
         </section>
     </main>
     <footer class="footer">
-        <a class="link footer-link" href="/"><span class="accent">Web</span>Studio</a>
+        <a class="link logo" href="/">Web<span class="footer-logo">Studio</span></a>
         <address class="footer-address">
             <ul class="list footer-address-list">
                 <li>
                     <a class="link footer-address-link" href="https://goo.gl/maps/JicM432xmanPStuN9" target="_blank"
                          rel="noopener noreferrer">г. Киев,
-                        пр-т Леси Украинки, 26</a>
+                        пр-т Леси Украинки, 26
+                    </a>
                 </li>
                 <li>
-                    <a class="link footer-address" href="mailto:info@example.com">info@example.com</a>
+                    <a class="link footer-address-link" href="mailto:info@example.com">
+                        info@example.com
+                    </a>
                 </li>
                 <li>
-                    <a class="link footer-address" href="tel:+380991111111">+38 099 111 11 11</a>
+                    <a class="link footer-address-link" href="tel:+380991111111">+38 099 111 11 11</a>
                 </li>
             </ul>
         </address>
