--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="header">
-        <a class="header-logo link" href="/"><span class="accent">Web</span>Studio</a>
+        <a class="link logo" href="/">Web<span class="header-logo">Studio</span></a>
         <nav class="header-nav">
             <ul class="list header-list">
                 <li class="header-item">
@@ -29,74 +29,84 @@
         </nav>
         <ul class="list header-contacts">
             <li>
-                <a class="link header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="link header-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-                <a class="link header-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+                <a class="link header-link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
     <main>
         <section>
-            <ul class="list">
+            <h1 class="visually-hidden">portfolio</h1>
+            <ul class="list filter-list">
                 <li>
-                    <button type="button" class="btn current">Все</button>
+                    <button type="button" class="filter-btn current">Все</button>
                 </li>
                 <li>
-                    <button type="button" class="btn">Веб-сайты</button>
+                    <button type="button" class="filter-btn">Веб-сайты</button>
                 </li>
                 <li>
-                    <button type="button" class="btn">Приложения</button>
+                    <button type="button" class="filter-btn">Приложения</button>
                 </li>
                 <li>
-                    <button type="button" class="btn">Дизайн</button>
+                    <button type="button" class="filter-btn">Дизайн</button>
                 </li>
                 <li>
-                    <button type="button" class="btn">Маркетинг</button>
+                    <button type="button" class="filter-btn">Маркетинг</button>
                 </li>
             </ul>
-            <ul>
-                <li><img src="./images/portfolio-img-1.jpg" alt="Технокряк">
-                    <h3 class="img">Технокряк</h3>
-                    <p class="img-text">Веб-сайт</p>
+            <ul class="list portfolio-list">
+                <li>
+                    <a class="link" href=""><img src="./images/portfolio-img-1.jpg" alt="Технокряк" width="370" height="294" />
+                    <h2 class="portfolio-title">Технокряк</h2>
+                    <p class="portfolio-text">Веб-сайт</p></a>
                 </li>
-                <li><img src="./images/portfolio-img-2.jpg" alt="Постер New Orlean vs Golden Star">
-                    <h3 class="img">Постер New Orlean vs Golden Star</h3>
-                    <p class="img-text">Дизайн</p>
+                <li>
+                    <a class="link" href=""><img src="./images/portfolio-img-2.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294" />
+                    <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+                    <p class="portfolio-text">Дизайн</p></a>
                 </li>
-                <li><img src="./images/portfolio-img-3.jpg" alt="Ресторан Seafood">
-                    <h3 class="img">Ресторан Seafood</h3>
-                    <p class="img-text">Приложение</p>
+                <li>
+                    <a class="link" href=""><img src="./images/portfolio-img-3.jpg" alt="Ресторан Seafood" width="370" height="294" />
+                    <h2 class="portfolio-title">Ресторан Seafood</h2>
+                    <p class="portfolio-text">Приложение</p></a>
                 </li>
-                <li><img src="./images/portfolio-img-4.jpg" alt="Проект Prime">
-                    <h3 class="img">Проект Prime</h3>
-                    <p class="img-text">Маркетинг</p>
+                <li>
+                    <a class="link" href=""><img src="./images/portfolio-img-4.jpg" alt="Проект Prime" width="370" height="294" />
+                    <h2 class="portfolio-title">Проект Prime</h2>
+                    <p class="portfolio-text">Маркетинг</p></a>
                 </li>
-                <li><img src="./images/portfolio-img-5.jpg" alt="Проект Boxes">
-                    <h3 class="img">Проект Boxes</h3>
-                    <p class="img-text">Приложение</p>
+                <li>
+                    <a class="link" href=""><img src="./images/portfolio-img-5.jpg" alt="Проект Boxes" width="370" height="294" />
+                    <h2 class="portfolio-title">Проект Boxes</h2>
+                    <p class="portfolio-text">Приложение</p></a>
                 </li>
-                <li><img src="./images/portfolio-img-6.jpg" alt="Inspiration has no Borders">
-                    <h3 class="img">Inspiration has no Borders</h3>
-                    <p class="img-text">Веб-сайт</p>
+                <li>
+                    <a class="link" href=""><img src="./images/portfolio-img-6.jpg" alt="Inspiration has no Borders" width="370" height="294" />
+                    <h2 class="portfolio-title">Inspiration has no Borders</h2>
+                    <p class="portfolio-text">Веб-сайт</p></a>
                 </li>
-                <li><img src="./images/portfolio-img-7.jpg" alt="Издание Limited Edition">
-                    <h3 class="img">Издание Limited Edition</h3>
-                    <p class="img-text">Дизайн</p>
+                <li>
+                    <a class="link" href=""><img src="./images/portfolio-img-7.jpg" alt="Издание Limited Edition" width="370" height="294" />
+                    <h2 class="portfolio-title">Издание Limited Edition</h2>
+                    <p class="portfolio-text">Дизайн</p></a>
                 </li>
-                <li><img src="./images/portfolio-img-8.jpg" alt="Проект LAB">
-                    <h3 class="img">Проект LAB</h3>
-                    <p class="img-text">Маркетинг</p>
+                <li>
+                    <a class="link" href=""><img src="./images/portfolio-img-8.jpg" alt="Проект LAB" width="370" height="294" />
+                    <h2 class="portfolio-title">Проект LAB</h2>
+                    <p class="portfolio-text">Маркетинг</p></a>
                 </li>
-                <li><img src="./images/portfolio-img-9.jpg" alt="Growing Business">
-                    <h3 class="img">Growing Business</h3>
-                    <p class="img-text">Приложение</p>
+                <li>
+                    <a class="link" href=""><img src="./images/portfolio-img-9.jpg" alt="Growing Business" width="370" height="294" />
+                    <h2 class="portfolio-title">Growing Business</h2>
+                    <p class="portfolio-text">Приложение</p></a>
                 </li>
             </ul>
         </section>
     </main>
     <footer class="footer">
-        <a class="link footer-link" href="/"><span class="accent">Web</span>Studio</a>
+        <a class="link logo" href="/">Web<span class="footer-logo">Studio</span></a>
         <address class="footer-address">
             <ul class="list footer-address-list">
                 <li class="footer-address-item">
@@ -105,10 +115,10 @@
                         пр-т Леси Украинки, 26</a>
                 </li>
                 <li class="footer-address-item">
-                    <a class="link footer-address" href="mailto:info@example.com">info@example.com</a>
+                    <a class="link footer-address-link" href="mailto:info@example.com">info@example.com</a>
                 </li>
                 <li class="footer-address-item">
-                    <a class="link footer-address" href="tel:+380991111111">+38 099 111 11 11</a>
+                    <a class="link footer-address-link" href="tel:+380991111111">+38 099 111 11 11</a>
                 </li>
             </ul>
         </address>
