--- a/portfolio.html
+++ b/portfolio.html
@@ -58,47 +58,56 @@
             </ul>
             <ul class="list portfolio-list">
                 <li>
-                    <a class="link" href=""><img src="./images/portfolio-img-1.jpg" alt="Технокряк" width="370" height="294" />
+                    <a class="link" href="https://www.google.com.ua/webhp?tab=rw&authuser=0" target="_blank" rel="noopener noreferrer">
+                        <img src="./images/portfolio-img-1.jpg" alt="Технокряк" width="370" height="294" />
                     <h2 class="portfolio-title">Технокряк</h2>
                     <p class="portfolio-text">Веб-сайт</p></a>
                 </li>
                 <li>
-                    <a class="link" href=""><img src="./images/portfolio-img-2.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294" />
+                    <a class="link" href="https://www.google.com.ua/webhp?tab=rw&authuser=0" target="_blank" rel="noopener noreferrer">
+                        <img src="./images/portfolio-img-2.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294" />
                     <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
                     <p class="portfolio-text">Дизайн</p></a>
                 </li>
                 <li>
-                    <a class="link" href=""><img src="./images/portfolio-img-3.jpg" alt="Ресторан Seafood" width="370" height="294" />
+                    <a class="link" href="https://www.google.com.ua/webhp?tab=rw&authuser=0" target="_blank" rel="noopener noreferrer">
+                        <img src="./images/portfolio-img-3.jpg" alt="Ресторан Seafood" width="370" height="294" />
                     <h2 class="portfolio-title">Ресторан Seafood</h2>
                     <p class="portfolio-text">Приложение</p></a>
                 </li>
                 <li>
-                    <a class="link" href=""><img src="./images/portfolio-img-4.jpg" alt="Проект Prime" width="370" height="294" />
+                    <a class="link" href="https://www.google.com.ua/webhp?tab=rw&authuser=0" target="_blank" rel="noopener noreferrer">
+                        <img src="./images/portfolio-img-4.jpg" alt="Проект Prime" width="370" height="294" />
                     <h2 class="portfolio-title">Проект Prime</h2>
                     <p class="portfolio-text">Маркетинг</p></a>
                 </li>
                 <li>
-                    <a class="link" href=""><img src="./images/portfolio-img-5.jpg" alt="Проект Boxes" width="370" height="294" />
+                    <a class="link" href="https://www.google.com.ua/webhp?tab=rw&authuser=0" target="_blank" rel="noopener noreferrer">
+                        <img src="./images/portfolio-img-5.jpg" alt="Проект Boxes" width="370" height="294" />
                     <h2 class="portfolio-title">Проект Boxes</h2>
                     <p class="portfolio-text">Приложение</p></a>
                 </li>
                 <li>
-                    <a class="link" href=""><img src="./images/portfolio-img-6.jpg" alt="Inspiration has no Borders" width="370" height="294" />
+                    <a class="link" href="https://www.google.com.ua/webhp?tab=rw&authuser=0" target="_blank" rel="noopener noreferrer">
+                        <img src="./images/portfolio-img-6.jpg" alt="Inspiration has no Borders" width="370" height="294" />
                     <h2 class="portfolio-title">Inspiration has no Borders</h2>
                     <p class="portfolio-text">Веб-сайт</p></a>
                 </li>
                 <li>
-                    <a class="link" href=""><img src="./images/portfolio-img-7.jpg" alt="Издание Limited Edition" width="370" height="294" />
+                    <a class="link" href="https://www.google.com.ua/webhp?tab=rw&authuser=0" target="_blank" rel="noopener noreferrer">
+                        <img src="./images/portfolio-img-7.jpg" alt="Издание Limited Edition" width="370" height="294" />
                     <h2 class="portfolio-title">Издание Limited Edition</h2>
                     <p class="portfolio-text">Дизайн</p></a>
                 </li>
                 <li>
-                    <a class="link" href=""><img src="./images/portfolio-img-8.jpg" alt="Проект LAB" width="370" height="294" />
+                    <a class="link" href="https://www.google.com.ua/webhp?tab=rw&authuser=0" target="_blank" rel="noopener noreferrer">
+                        <img src="./images/portfolio-img-8.jpg" alt="Проект LAB" width="370" height="294" />
                     <h2 class="portfolio-title">Проект LAB</h2>
                     <p class="portfolio-text">Маркетинг</p></a>
                 </li>
                 <li>
-                    <a class="link" href=""><img src="./images/portfolio-img-9.jpg" alt="Growing Business" width="370" height="294" />
+                    <a class="link" href="https://www.google.com.ua/webhp?tab=rw&authuser=0" target="_blank" rel="noopener noreferrer">
+                        <img src="./images/portfolio-img-9.jpg" alt="Growing Business" width="370" height="294" />
                     <h2 class="portfolio-title">Growing Business</h2>
                     <p class="portfolio-text">Приложение</p></a>
                 </li>
